# Modpack

./: .gitattributes  .gitignore  README.md  mods_server.txt
.github/workflows/: update.yml
atm10/: index.toml  pack.toml
atm10/mods/: extended-industrialization.pw.toml  industrialization-overdrive.pw.toml  mahou-tsukai.pw.toml  mekanism-more-machine.pw.toml
atm10_danny/: index.toml  pack.toml
atm10_danny/mods/: draconic-evolution.pw.toml  modular-bees.pw.toml  productive-metalworks.pw.toml  refined-types.pw.toml  silent-gear-metalworks.pw.toml
cobbleverse/: index.toml  pack.toml
cobbleverse/config/: cobblemon-battle-extras.json  iris.properties  packetfixer.properties
cobbleverse/datapacks/: PokeCenterPCs-DP.pw.toml
cobbleverse/mods/: AdvancementPlaques-1.21.1-fabric-1.6.8.pw.toml  BetterF1-Fabric-1.1+1.21.7.pw.toml  (+105 more)
fabric/: index.toml  pack.toml
lts_1_21/: index.toml  pack.toml
main/: .packwizignore  README.md  index.toml  pack.toml
main_1_20/: README.md  index.toml  pack.toml
main_1_21/: README.md  index.toml  pack.toml
modpack-importer/: Cargo.toml
modpack-importer/src/: cf_to_modrinth.rs  download_cf_mods.rs  importer.rs  main.rs  mod_sides.rs  models.rs  override_handler.rs  packwiz.rs  prompt.rs  zip_extractor.rs
scripts/: _check_hashes.py  _inspect_mrpack.py  check_modrinth_side.py  curseforge_to_modrinth.py  fix_malformed_modrinth.py  mrpack_to_packwiz.py  update_mod_sides.py
sunlit_valey/: pack.toml
sunlit_valley/: index.toml  pack.toml
vanilla_1_21_5/: index.toml  pack.toml
vanilla_server_1_21_x/: index.toml  pack.toml
(+2285 files in other folders)
