[package]
name = "modpack-importer"
version = "0.1.0"
edition = "2021"
authors = ["Modpack Developer"]
description = "A tool to import CurseForge modpacks with intelligent client/server mod separation"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
zip = "2.2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
regex = "1.11"
dialoguer = "0.11"
console = "0.15"
indexmap = { version = "2.7", features = ["serde"] }
serde_json = "1.0"
walkdir = "2.5"

[profile.release]
opt-level = 3
lto = true
